fix: lang check + recognize quanitity units in language
